yaml_signing/sign-pod.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-manifests
spec:
  validationFailureAction: enforce
  rules:
    - name: sign-pod
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        manifests:
          dryRun: 
            enable: true
            namespace: kyverno
          attestors:
          - count: 1
            entries:
            - keys:
                publicKeys: |-
                  -----BEGIN PUBLIC KEY-----
                  MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyBg8yod24/wIcc5QqlVLtCfL+6Te
[...]
                  -----END PUBLIC KEY-----
